--- a/MLRSingleChannel/Views/Shared/_Layout.cshtml
+++ b/MLRSingleChannel/Views/Shared/_Layout.cshtml
@@ -1,41 +1,92 @@
-﻿<!DOCTYPE html>
-<html>
+@{
+    //string version = typeof(CodeProject.Angular4.Portal.RouteConfig).Assembly.GetName().Version;
+    //string version = new Guid().ToString();
+
+    //string webApiEndPoint = System.Configuration.ConfigurationManager.AppSettings["WebApiEndPoint"];
+
+    string currentRoute = "/";
+
+    foreach (string key in HttpContext.Current.Request.QueryString.AllKeys)
+    {
+      // when the user hits F5 in the browser, Angular will get rebooted
+      // the current Angular route is submitted to ASP.NET MVC
+      // For this sample application, the ASP.NET MVC routing configuration was changed
+      // to return the original route back to the client as an appended query string parameter
+
+      if (key == "CurrentRoute")
+      {
+        currentRoute = HttpContext.Current.Request.QueryString[key];
+        break;
+      }
+    }
+
+    IEnumerable<string> fileEntries = Enumerable.Empty<string>();
+
+    List<string> bundles = new List<string>();
+
+    fileEntries = Directory.EnumerateFiles(Server.MapPath("~/Scripts/NgApp"));
+    bundles.Add("inline.");
+    bundles.Add("polyfills.");
+    bundles.Add("styles.");
+    bundles.Add("vendor.");
+    bundles.Add("main.");
+}
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+  <meta charset="utf-8">
+  <title>NgApp</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+  @RenderBody()
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+  <app-root webApiEndPoint="http://localhost:55499/api/">Loading...</app-root>
+  @*<script type="text/javascript" src="~/Scripts/NgApp/inline.bundle.js"></script>
+    <script type="text/javascript" src="~/Scripts/NgApp/polyfills.bundle.js"></script>
+    <script type="text/javascript" src="~/Scripts/NgApp/styles.bundle.js"></script>
+    <script type="text/javascript" src="~/Scripts/NgApp/vendor.bundle.js"></script>
+    <script type="text/javascript" src="~/Scripts/NgApp/main.bundle.js"></script>*@
+
+  @if (HttpContext.Current.IsDebuggingEnabled)
+  {
+    <script type="text/javascript" src="~/Scripts/NgApp/inline.bundle.js"></script>
+    <script type="text/javascript" src="~/Scripts/NgApp/polyfills.bundle.js"></script>
+    <script type="text/javascript" src="~/Scripts/NgApp/styles.bundle.js"></script>
+    <script type="text/javascript" src="~/Scripts/NgApp/vendor.bundle.js"></script>
+    <script type="text/javascript" src="~/Scripts/NgApp/main.bundle.js"></script>
+
+
+    @*<script src="~/Scripts/NgApp/inline.bundle.js?v=@version"></script>
+      <script src="~/Scripts/NgApp/polyfills.bundle.js?v=@version"></script>
+      <script src="~/Scripts/NgApp/dist/styles.bundle.js?v=@version"></script>
+      <script src="~/Scripts/NgApp/vendor.bundle.js?v=@version"></script>
+      <script src="~/Scripts/NgApp/main.bundle.js?v=@version"></script>*@
+  }
+  else
+  {
+    foreach (string bundleName in bundles)
+    {
+      foreach (string fileName in fileEntries)
+      {
+        FileInfo fileInfo = new FileInfo(fileName);
+        if (fileInfo.Name.Contains(bundleName) && fileInfo.Name.Contains(".map") == false)
+        {
+          if (fileInfo.Name.Contains("styles"))
+          {
+            <link href="~/dist/@fileInfo.Name" rel="stylesheet" />
+          }
+          else
+          {
+            <script src="~/Scripts/NgApp/@fileInfo.Name"></script>
+          }
+        }
+
+      }
+
+    }
+
+  }
 </body>
 </html>
